src/main.output
Terminals unused in grammar

    T_STRING
    BOOL


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: statement
    3           | statements statement

    4 statement: SEMICOLON
    5          | matched_stmt
    6          | unmatched_stmt

    7 matched_stmt: function
    8             | while_stmt
    9             | for_stmt
   10             | ASSIGN_stmt SEMICOLON
   11             | RETURN_stmt SEMICOLON
   12             | declaration SEMICOLON
   13             | printf_stmt SEMICOLON
   14             | scanf_stmt SEMICOLON
   15             | expr SEMICOLON
   16             | matched_if_stmt

   17 unmatched_stmt: unmatched_if_stmt

   18 function: T IDENTIFIER LPAREN params RPAREN LBRACE statements RBRACE
   19         | T IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE

   20 params: T IDENTIFIER
   21       | T IDENTIFIER EQ_ASSIGN CONST
   22       | params COMMA params

   23 ASSIGN_stmt: IDENTIFIER LOP_ASSIGN expr
   24            | IDENTIFIER EQ_ASSIGN expr

   25 RETURN_stmt: RETURN expr

   26 declaration: T declare_id_list

   27 while_stmt: WHILE LPAREN expr RPAREN statement
   28           | WHILE LPAREN expr RPAREN LBRACE statements RBRACE

   29 for_stmt: FOR LPAREN ASSIGN_stmt SEMICOLON expr SEMICOLON expr RPAREN statement
   30         | FOR LPAREN declaration SEMICOLON expr SEMICOLON expr RPAREN statement
   31         | FOR LPAREN ASSIGN_stmt SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE
   32         | FOR LPAREN declaration SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE

   33 matched_if_stmt: IF LPAREN expr RPAREN matched_stmt ELSE matched_stmt
   34                | IF LPAREN expr RPAREN LBRACE statements RBRACE ELSE matched_stmt
   35                | IF LPAREN expr RPAREN matched_stmt ELSE LBRACE statements RBRACE
   36                | IF LPAREN expr RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE

   37 unmatched_if_stmt: IF LPAREN expr RPAREN matched_stmt ELSE unmatched_stmt
   38                  | IF LPAREN expr RPAREN LBRACE statements RBRACE ELSE unmatched_stmt
   39                  | IF LPAREN expr RPAREN statement
   40                  | IF LPAREN expr RPAREN LBRACE statements RBRACE

   41 printf_stmt: PRINTF LPAREN expr RPAREN
   42            | PRINTF LPAREN STRING COMMA printf_id_list RPAREN

   43 scanf_stmt: SCANF LPAREN STRING COMMA scanf_id_list RPAREN

   44 expr: expr MOD expr
   45     | expr PLUS expr
   46     | expr MINUS expr
   47     | expr MULT expr
   48     | expr DIV expr
   49     | expr AND expr
   50     | expr OR expr
   51     | expr RELOP expr
   52     | DPLUS expr
   53     | expr DPLUS
   54     | DMINUS expr
   55     | expr DMINUS
   56     | NOT expr
   57     | MINUS expr
   58     | LPAREN expr RPAREN
   59     | term

   60 term: IDENTIFIER
   61     | CONST

   62 CONST: INTEGER
   63      | CHAR
   64      | STRING

   65 declare_id_list: ASSIGN_stmt
   66                | MULT IDENTIFIER
   67                | IDENTIFIER
   68                | declare_id_list COMMA declare_id_list

   69 printf_id_list: expr
   70               | printf_id_list COMMA printf_id_list

   71 scanf_id_list: IDENTIFIER
   72              | POS IDENTIFIER
   73              | scanf_id_list COMMA scanf_id_list

   74 T: T_INT
   75  | T_CHAR
   76  | T_BOOL
   77  | VOID


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_CHAR (258) 75
    T_INT (259) 74
    T_STRING (260)
    T_BOOL (261) 76
    VOID (262) 77
    LOP_ASSIGN (263) 23
    WHILE (264) 27 28
    FOR (265) 29 30 31 32
    IF (266) 33 34 35 36 37 38 39 40
    ELSE (267) 33 34 35 36 37 38
    RETURN (268) 25
    PRINTF (269) 41 42
    SCANF (270) 43
    LPAREN (271) 18 19 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 58
    RPAREN (272) 18 19 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 58
    LBRACE (273) 18 19 28 31 32 34 35 36 38 40
    RBRACE (274) 18 19 28 31 32 34 35 36 38 40
    COMMA (275) 22 42 43 68 70 73
    POS (276) 72
    MOD (277) 44
    PLUS (278) 45
    MINUS (279) 46 57
    MULT (280) 47 66
    DIV (281) 48
    AND (282) 49
    OR (283) 50
    NOT (284) 56
    DMINUS (285) 54 55
    DPLUS (286) 52 53
    RELOP (287) 51
    IDENTIFIER (288) 18 19 20 21 23 24 60 66 67 71 72
    INTEGER (289) 62
    CHAR (290) 63
    BOOL (291)
    STRING (292) 42 43 64
    SEMICOLON (293) 4 10 11 12 13 14 15 29 30 31 32
    IFX (294)
    EQ_ASSIGN (295) 21 24
    UDMINUS (296)
    UDPLUS (297)
    UMINUS (298)
    POINTER (299)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program (46)
        on left: 1
        on right: 0
    statements (47)
        on left: 2 3
        on right: 1 3 18 19 28 31 32 34 35 36 38 40
    statement (48)
        on left: 4 5 6
        on right: 2 3 27 29 30 39
    matched_stmt (49)
        on left: 7 8 9 10 11 12 13 14 15 16
        on right: 5 33 34 35 37
    unmatched_stmt (50)
        on left: 17
        on right: 6 37 38
    function (51)
        on left: 18 19
        on right: 7
    params (52)
        on left: 20 21 22
        on right: 18 22
    ASSIGN_stmt (53)
        on left: 23 24
        on right: 10 29 31 65
    RETURN_stmt (54)
        on left: 25
        on right: 11
    declaration (55)
        on left: 26
        on right: 12 30 32
    while_stmt (56)
        on left: 27 28
        on right: 8
    for_stmt (57)
        on left: 29 30 31 32
        on right: 9
    matched_if_stmt (58)
        on left: 33 34 35 36
        on right: 16
    unmatched_if_stmt (59)
        on left: 37 38 39 40
        on right: 17
    printf_stmt (60)
        on left: 41 42
        on right: 13
    scanf_stmt (61)
        on left: 43
        on right: 14
    expr (62)
        on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 15 23 24 25 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 69
    term (63)
        on left: 60 61
        on right: 59
    CONST (64)
        on left: 62 63 64
        on right: 21 61
    declare_id_list (65)
        on left: 65 66 67 68
        on right: 26 68
    printf_id_list (66)
        on left: 69 70
        on right: 42 70
    scanf_id_list (67)
        on left: 71 72 73
        on right: 43 73
    T (68)
        on left: 74 75 76 77
        on right: 18 19 20 21 26


State 0

    0 $accept: . program $end

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    VOID        shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    IF          shift, and go to state 7
    RETURN      shift, and go to state 8
    PRINTF      shift, and go to state 9
    SCANF       shift, and go to state 10
    LPAREN      shift, and go to state 11
    MINUS       shift, and go to state 12
    NOT         shift, and go to state 13
    DMINUS      shift, and go to state 14
    DPLUS       shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    INTEGER     shift, and go to state 17
    CHAR        shift, and go to state 18
    STRING      shift, and go to state 19
    SEMICOLON   shift, and go to state 20

    program            go to state 21
    statements         go to state 22
    statement          go to state 23
    matched_stmt       go to state 24
    unmatched_stmt     go to state 25
    function           go to state 26
    ASSIGN_stmt        go to state 27
    RETURN_stmt        go to state 28
    declaration        go to state 29
    while_stmt         go to state 30
    for_stmt           go to state 31
    matched_if_stmt    go to state 32
    unmatched_if_stmt  go to state 33
    printf_stmt        go to state 34
    scanf_stmt         go to state 35
    expr               go to state 36
    term               go to state 37
    CONST              go to state 38
    T                  go to state 39


State 1

   75 T: T_CHAR .

    $default  reduce using rule 75 (T)


State 2

   74 T: T_INT .

    $default  reduce using rule 74 (T)


State 3

   76 T: T_BOOL .

    $default  reduce using rule 76 (T)


State 4

   77 T: VOID .

    $default  reduce using rule 77 (T)


State 5

   27 while_stmt: WHILE . LPAREN expr RPAREN statement
   28           | WHILE . LPAREN expr RPAREN LBRACE statements RBRACE

    LPAREN  shift, and go to state 40


State 6

   29 for_stmt: FOR . LPAREN ASSIGN_stmt SEMICOLON expr SEMICOLON expr RPAREN statement
   30         | FOR . LPAREN declaration SEMICOLON expr SEMICOLON expr RPAREN statement
   31         | FOR . LPAREN ASSIGN_stmt SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE
   32         | FOR . LPAREN declaration SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE

    LPAREN  shift, and go to state 41


State 7

   33 matched_if_stmt: IF . LPAREN expr RPAREN matched_stmt ELSE matched_stmt
   34                | IF . LPAREN expr RPAREN LBRACE statements RBRACE ELSE matched_stmt
   35                | IF . LPAREN expr RPAREN matched_stmt ELSE LBRACE statements RBRACE
   36                | IF . LPAREN expr RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
   37 unmatched_if_stmt: IF . LPAREN expr RPAREN matched_stmt ELSE unmatched_stmt
   38                  | IF . LPAREN expr RPAREN LBRACE statements RBRACE ELSE unmatched_stmt
   39                  | IF . LPAREN expr RPAREN statement
   40                  | IF . LPAREN expr RPAREN LBRACE statements RBRACE

    LPAREN  shift, and go to state 42


State 8

   25 RETURN_stmt: RETURN . expr

    LPAREN      shift, and go to state 11
    MINUS       shift, and go to state 12
    NOT         shift, and go to state 13
    DMINUS      shift, and go to state 14
    DPLUS       shift, and go to state 15
    IDENTIFIER  shift, and go to state 43
    INTEGER     shift, and go to state 17
    CHAR        shift, and go to state 18
    STRING      shift, and go to state 19

    expr   go to state 44
    term   go to state 37
    CONST  go to state 38


State 9

   41 printf_stmt: PRINTF . LPAREN expr RPAREN
   42            | PRINTF . LPAREN STRING COMMA printf_id_list RPAREN

    LPAREN  shift, and go to state 45


State 10

   43 scanf_stmt: SCANF . LPAREN STRING COMMA scanf_id_list RPAREN

    LPAREN  shift, and go to state 46


State 11

   58 expr: LPAREN . expr RPAREN

    LPAREN      shift, and go to state 11
    MINUS       shift, and go to state 12
    NOT         shift, and go to state 13
    DMINUS      shift, and go to state 14
    DPLUS       shift, and go to state 15
    IDENTIFIER  shift, and go to state 43
    INTEGER     shift, and go to state 17
    CHAR        shift, and go to state 18
    STRING      shift, and go to state 19

    expr   go to state 47
    term   go to state 37
    CONST  go to state 38


State 12

   57 expr: MINUS . expr

    LPAREN      shift, and go to state 11
    MINUS       shift, and go to state 12
    NOT         shift, and go to state 13
    DMINUS      shift, and go to state 14
    DPLUS       shift, and go to state 15
    IDENTIFIER  shift, and go to state 43
    INTEGER     shift, and go to state 17
    CHAR        shift, and go to state 18
    STRING      shift, and go to state 19

    expr   go to state 48
    term   go to state 37
    CONST  go to state 38


State 13

   56 expr: NOT . expr

    LPAREN      shift, and go to state 11
    MINUS       shift, and go to state 12
    NOT         shift, and go to state 13
    DMINUS      shift, and go to state 14
    DPLUS       shift, and go to state 15
    IDENTIFIER  shift, and go to state 43
    INTEGER     shift, and go to state 17
    CHAR        shift, and go to state 18
    STRING      shift, and go to state 19

    expr   go to state 49
    term   go to state 37
    CONST  go to state 38


State 14

   54 expr: DMINUS . expr

    LPAREN      shift, and go to state 11
    MINUS       shift, and go to state 12
    NOT         shift, and go to state 13
    DMINUS      shift, and go to state 14
    DPLUS       shift, and go to state 15
    IDENTIFIER  shift, and go to state 43
    INTEGER     shift, and go to state 17
    CHAR        shift, and go to state 18
    STRING      shift, and go to state 19

    expr   go to state 50
    term   go to state 37
    CONST  go to state 38


State 15

   52 expr: DPLUS . expr

    LPAREN      shift, and go to state 11
    MINUS       shift, and go to state 12
    NOT         shift, and go to state 13
    DMINUS      shift, and go to state 14
    DPLUS       shift, and go to state 15
    IDENTIFIER  shift, and go to state 43
    INTEGER     shift, and go to state 17
    CHAR        shift, and go to state 18
    STRING      shift, and go to state 19

    expr   go to state 51
    term   go to state 37
    CONST  go to state 38


State 16

   23 ASSIGN_stmt: IDENTIFIER . LOP_ASSIGN expr
   24            | IDENTIFIER . EQ_ASSIGN expr
   60 term: IDENTIFIER .

    LOP_ASSIGN  shift, and go to state 52
    EQ_ASSIGN   shift, and go to state 53

    $default  reduce using rule 60 (term)


State 17

   62 CONST: INTEGER .

    $default  reduce using rule 62 (CONST)


State 18

   63 CONST: CHAR .

    $default  reduce using rule 63 (CONST)


State 19

   64 CONST: STRING .

    $default  reduce using rule 64 (CONST)


State 20

    4 statement: SEMICOLON .

    $default  reduce using rule 4 (statement)


State 21

    0 $accept: program . $end

    $end  shift, and go to state 54


State 22

    1 program: statements .
    3 statements: statements . statement

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    VOID        shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    IF          shift, and go to state 7
    RETURN      shift, and go to state 8
    PRINTF      shift, and go to state 9
    SCANF       shift, and go to state 10
    LPAREN      shift, and go to state 11
    MINUS       shift, and go to state 12
    NOT         shift, and go to state 13
    DMINUS      shift, and go to state 14
    DPLUS       shift, and go to state 15
    IDENTIFIER  shift, and go to state 16
    INTEGER     shift, and go to state 17
    CHAR        shift, and go to state 18
    STRING      shift, and go to state 19
    SEMICOLON   shift, and go to state 20

    $default  reduce using rule 1 (program)

    statement          go to state 55
    matched_stmt       go to state 24
    unmatched_stmt     go to state 25
    function           go to state 26
    ASSIGN_stmt        go to state 27
    RETURN_stmt        go to state 28
    declaration        go to state 29
    while_stmt         go to state 30
    for_stmt           go to state 31
    matched_if_stmt    go to state 32
    unmatched_if_stmt  go to state 33
    printf_stmt        go to state 34
    scanf_stmt         go to state 35
    expr               go to state 36
    term               go to state 37
    CONST              go to state 38
    T                  go to state 39


State 23

    2 statements: statement .

    $default  reduce using rule 2 (statements)


State 24

    5 statement: matched_stmt .

    $default  reduce using rule 5 (statement)


State 25

    6 statement: unmatched_stmt .

    $default  reduce using rule 6 (statement)


State 26

    7 matched_stmt: function .

    $default  reduce using rule 7 (matched_stmt)


State 27

   10 matched_stmt: ASSIGN_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 56


State 28

   11 matched_stmt: RETURN_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 57


State 29

   12 matched_stmt: declaration . SEMICOLON

    SEMICOLON  shift, and go to state 58


State 30

    8 matched_stmt: while_stmt .

    $default  reduce using rule 8 (matched_stmt)


State 31

    9 matched_stmt: for_stmt .

    $default  reduce using rule 9 (matched_stmt)


State 32

   16 matched_stmt: matched_if_stmt .

    $default  reduce using rule 16 (matched_stmt)


State 33

   17 unmatched_stmt: unmatched_if_stmt .

    $default  reduce using rule 17 (unmatched_stmt)


State 34

   13 matched_stmt: printf_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 59


State 35

   14 matched_stmt: scanf_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 60


State 36

   15 matched_stmt: expr . SEMICOLON
   44 expr: expr . MOD expr
   45     | expr . PLUS expr
   46     | expr . MINUS expr
   47     | expr . MULT expr
   48     | expr . DIV expr
   49     | expr . AND expr
   50     | expr . OR expr
   51     | expr . RELOP expr
   53     | expr . DPLUS
   55     | expr . DMINUS

    MOD        shift, and go to state 61
    PLUS       shift, and go to state 62
    MINUS      shift, and go to state 63
    MULT       shift, and go to state 64
    DIV        shift, and go to state 65
    AND        shift, and go to state 66
    OR         shift, and go to state 67
    DMINUS     shift, and go to state 68
    DPLUS      shift, and go to state 69
    RELOP      shift, and go to state 70
    SEMICOLON  shift, and go to state 71


State 37

   59 expr: term .

    $default  reduce using rule 59 (expr)


State 38

   61 term: CONST .

    $default  reduce using rule 61 (term)


State 39

   18 function: T . IDENTIFIER LPAREN params RPAREN LBRACE statements RBRACE
   19         | T . IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
   26 declaration: T . declare_id_list

    MULT        shift, and go to state 72
    IDENTIFIER  shift, and go to state 73

    ASSIGN_stmt      go to state 74
    declare_id_list  go to state 75


State 40

   27 while_stmt: WHILE LPAREN . expr RPAREN statement
   28           | WHILE LPAREN . expr RPAREN LBRACE statements RBRACE

    LPAREN      shift, and go to state 11
    MINUS       shift, and go to state 12
    NOT         shift, and go to state 13
    DMINUS      shift, and go to state 14
    DPLUS       shift, and go to state 15
    IDENTIFIER  shift, and go to state 43
    INTEGER     shift, and go to state 17
    CHAR        shift, and go to state 18
    STRING      shift, and go to state 19

    expr   go to state 76
    term   go to state 37
    CONST  go to state 38


State 41

   29 for_stmt: FOR LPAREN . ASSIGN_stmt SEMICOLON expr SEMICOLON expr RPAREN statement
   30         | FOR LPAREN . declaration SEMICOLON expr SEMICOLON expr RPAREN statement
   31         | FOR LPAREN . ASSIGN_stmt SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE
   32         | FOR LPAREN . declaration SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    VOID        shift, and go to state 4
    IDENTIFIER  shift, and go to state 77

    ASSIGN_stmt  go to state 78
    declaration  go to state 79
    T            go to state 80


State 42

   33 matched_if_stmt: IF LPAREN . expr RPAREN matched_stmt ELSE matched_stmt
   34                | IF LPAREN . expr RPAREN LBRACE statements RBRACE ELSE matched_stmt
   35                | IF LPAREN . expr RPAREN matched_stmt ELSE LBRACE statements RBRACE
   36                | IF LPAREN . expr RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
   37 unmatched_if_stmt: IF LPAREN . expr RPAREN matched_stmt ELSE unmatched_stmt
   38                  | IF LPAREN . expr RPAREN LBRACE statements RBRACE ELSE unmatched_stmt
   39                  | IF LPAREN . expr RPAREN statement
   40                  | IF LPAREN . expr RPAREN LBRACE statements RBRACE

    LPAREN      shift, and go to state 11
    MINUS       shift, and go to state 12
    NOT         shift, and go to state 13
    DMINUS      shift, and go to state 14
    DPLUS       shift, and go to state 15
    IDENTIFIER  shift, and go to state 43
    INTEGER     shift, and go to state 17
    CHAR        shift, and go to state 18
    STRING      shift, and go to state 19

    expr   go to state 81
    term   go to state 37
    CONST  go to state 38


State 43

   60 term: IDENTIFIER .

    $default  reduce using rule 60 (term)


State 44

   25 RETURN_stmt: RETURN expr .
   44 expr: expr . MOD expr
   45     | expr . PLUS expr
   46     | expr . MINUS expr
   47     | expr . MULT expr
   48     | expr . DIV expr
   49     | expr . AND expr
   50     | expr . OR expr
   51     | expr . RELOP expr
   53     | expr . DPLUS
   55     | expr . DMINUS

    MOD     shift, and go to state 61
    PLUS    shift, and go to state 62
    MINUS   shift, and go to state 63
    MULT    shift, and go to state 64
    DIV     shift, and go to state 65
    AND     shift, and go to state 66
    OR      shift, and go to state 67
    DMINUS  shift, and go to state 68
    DPLUS   shift, and go to state 69
    RELOP   shift, and go to state 70

    $default  reduce using rule 25 (RETURN_stmt)


State 45

   41 printf_stmt: PRINTF LPAREN . expr RPAREN
   42            | PRINTF LPAREN . STRING COMMA printf_id_list RPAREN

    LPAREN      shift, and go to state 11
    MINUS       shift, and go to state 12
    NOT         shift, and go to state 13
    DMINUS      shift, and go to state 14
    DPLUS       shift, and go to state 15
    IDENTIFIER  shift, and go to state 43
    INTEGER     shift, and go to state 17
    CHAR        shift, and go to state 18
    STRING      shift, and go to state 82

    expr   go to state 83
    term   go to state 37
    CONST  go to state 38


State 46

   43 scanf_stmt: SCANF LPAREN . STRING COMMA scanf_id_list RPAREN

    STRING  shift, and go to state 84


State 47

   44 expr: expr . MOD expr
   45     | expr . PLUS expr
   46     | expr . MINUS expr
   47     | expr . MULT expr
   48     | expr . DIV expr
   49     | expr . AND expr
   50     | expr . OR expr
   51     | expr . RELOP expr
   53     | expr . DPLUS
   55     | expr . DMINUS
   58     | LPAREN expr . RPAREN

    RPAREN  shift, and go to state 85
    MOD     shift, and go to state 61
    PLUS    shift, and go to state 62
    MINUS   shift, and go to state 63
    MULT    shift, and go to state 64
    DIV     shift, and go to state 65
    AND     shift, and go to state 66
    OR      shift, and go to state 67
    DMINUS  shift, and go to state 68
    DPLUS   shift, and go to state 69
    RELOP   shift, and go to state 70


State 48

   44 expr: expr . MOD expr
   45     | expr . PLUS expr
   46     | expr . MINUS expr
   47     | expr . MULT expr
   48     | expr . DIV expr
   49     | expr . AND expr
   50     | expr . OR expr
   51     | expr . RELOP expr
   53     | expr . DPLUS
   55     | expr . DMINUS
   57     | MINUS expr .

    DMINUS  shift, and go to state 68
    DPLUS   shift, and go to state 69

    $default  reduce using rule 57 (expr)


State 49
